--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ disqus_shortname:   vivian
 #bing-verify:
 email:              work_man2012@126.com
 #twitter:            username
-facebook:           vivian_sun@asus.com
+facebook:           vivian sun
 github:             vivianking6855
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
