--- a/_config.yml
+++ b/_config.yml
@@ -37,9 +37,9 @@ disqus_shortname:   vivian
   #ad-client:
   #ad-slot:
 #bing-verify:
-email:              work_man2012@126.com
+#email:              work_man2012@126.com
 #twitter:            username
-facebook:           vivian.sun.169405
+#facebook:           vivian.sun.169405
 github:             vivianking6855
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
