--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   vivian
+#disqus_shortname:   vivian
 
 # Social
 # if you don't have any of social below, comment the line.
