--- a/_config.yml
+++ b/_config.yml
@@ -72,3 +72,7 @@ jekyll-mentions:
 
 # Exclude list
 exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile]
+
+## theme website http://jekyllthemes.org/themes/moon/ 
+## theme website github https://github.com/TaylanTatli/Moon
+## theme website startkit http://taylantatli.me/Moon/moon-theme/
