--- a/_config.yml
+++ b/_config.yml
@@ -75,4 +75,4 @@ exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.j
 
 ## theme website http://jekyllthemes.org/themes/moon/ 
 ## theme website github https://github.com/TaylanTatli/Moon
-## theme website startkit http://taylantatli.me/Moon/moon-theme/
+## theme website startkit https://taylantatli.github.io/Moon/moon-theme/
