--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@ author: Vivian Sun
 url: http://vivianking6855.github.io
 resume_site: http://vivianking6855.github.io
 github: https://github.com/vivianking6855/
-baseurl: ""
+baseurl: ''
 description: Vivian's Blog
-meta_description: 今日事今日毕，生命经不起等待
-#motto: 今日事今日毕，生命经不起等待
+#meta_description: 今日事今日毕，生命经不起等待
+motto: 今日事今日毕，生命经不起等待
 #banner: 今日事今日毕，生命经不起等待
 
 
