--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ url: http://vivianking6855.github.io
 resume_site: http://vivianking6855.github.io
 github: https://github.com/vivianking6855/
 baseurl: ''
-description: Vivian's Blog
+description: 今日事今日毕，生命经不起等待
 #meta_description: 今日事今日毕，生命经不起等待
-motto: 今日事今日毕，生命经不起等待
+#motto: 今日事今日毕，生命经不起等待
 #banner: 今日事今日毕，生命经不起等待
 
 
