--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: http://vivianking6855.github.io
 resume_site: http://vivianking6855.github.io
 github: https://github.com/vivianking6855/
 baseurl: ''
-description: 今日事今日毕，生命经不起等待
+#description: 今日事今日毕，生命经不起等待
 #meta_description: 今日事今日毕，生命经不起等待
 #motto: 今日事今日毕，生命经不起等待
 #banner: 今日事今日毕，生命经不起等待
