--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Vivian's Blog
 email: work_man2012@126.com
 author: Vivian Sun
 url: http://vivianking6855.github.io
-resume_site: https://github.com/vivianking6855/vivianking6855.github.io/blob/master/about/index.md
+resume_site: http://vivianking6855.github.io/2017/03/14/about/
 github: https://github.com/vivianking6855/
 baseurl: ''
 #description: 今日事今日毕，生命经不起等待
