--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl: ''
 #description: 今日事今日毕，生命经不起等待
 #meta_description: 今日事今日毕，生命经不起等待
 #motto: 今日事今日毕，生命经不起等待
-banner: 今日事今日毕
+banner: 快乐的工作，快乐的生活，相信自己。
 
 
 #permalink: /:categories/:year/:month/:day/:title/
