--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ url: http://vivianking6855.github.io
 resume_site: http://vivianking6855.github.io/2017/03/14/about/
 github: https://github.com/vivianking6855/
 baseurl: ''
-description: 快乐的工作，快乐的生活，相信自己
-#meta_description: 快乐的工作，快乐的生活，相信自己。2
-#motto: 快乐的工作，快乐的生活，相信自己。3
-#banner: 快乐的工作，快乐的生活，相信自己
+description: 学无止境
+#meta_description: 三人行必有我师
+#motto: 不迁怒，不贰过
+#banner: 不迁怒，不贰过
 
 
 #permalink: /:categories/:year/:month/:day/:title/
