--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-name: Vivian's Blog
+name: 君子不器
 email: work_man2012@126.com
 author: Vivian Sun
 url: http://vivianking6855.github.io
 resume_site: http://vivianking6855.github.io/2018/03/08/about/
 github: https://github.com/vivianking6855/
 baseurl: ''
-description: 君子不器
+description: 知之者不如好之者，好之者不如乐知者 
 #meta_description: 三人行必有我师
 #motto: 不迁怒，不贰过
 banner: 仁是内在的质，礼是外在的文。文质彬彬，然后君子
