add some Internet words and blog config

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ github: https://github.com/vivianking6855/
 baseurl: ''
 #description: 知之者不如好之者，好之者不如乐知者 
 #meta_description: 三人行必有我师
-motto: 知之者不如好之者，好之者不如乐知者
+#motto: 知之者不如好之者，好之者不如乐知者
 banner: 仁是内在的质，礼是外在的文。文质彬彬，然后君子
 
 
